# Perroht

./: .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  PerrohtConfig.h.in  README.md
.github/workflows/: ci-test.yml
bench/: CMakeLists.txt  bench_common.hpp  bench_erase.cpp  bench_find.cpp  bench_insert.cpp  dataset_generator.hpp  extract_results.sh  gen_erase_dataset.cpp  gen_find_dataset.cpp  gen_insert_dataset.cpp  run_bench.sh
include/perroht/: perroht.hpp  unordered_map.hpp  unordered_set.hpp
include/perroht/details/: basic_unordered_map.hpp  basic_unordered_set.hpp  capacity_algorithms.hpp  data_holder.hpp  header.hpp  key_value_traits.hpp  memory.hpp  mmap.hpp  perroht_impl.hpp
include/perroht/utilities/: equal.hpp  hash.hpp  time.hpp
tests/: CMakeLists.txt  README.md  local-test.cpp  local_insert_from_file_test.cpp  random_insert_and_erase.cpp  test_data_holder.cpp  test_header.cpp  test_key_value_traits.cpp  test_perroht.cpp  test_unordered_map.cpp  test_unordered_set.cpp
